--- a/pkg/RNetLogo/inst/parallelProcessing/parallelProcessing.Rnw
+++ b/pkg/RNetLogo/inst/parallelProcessing/parallelProcessing.Rnw
@@ -20,9 +20,9 @@
 
 %% an abstract and keywords
 \Abstract{
-RNetLogo is a flexible interface for NetLogo to R. It opens various possiblities to connect agent-based models with advanced statistics. It opens the possiblity to use R as the starting point to design systematic experiments with agent-based models
-and perform parameter fittings and sensitivity analysis. Therefore, it can be necessary to perform repeated simulations which could be parallelized. Here, I present how such a parallelization could be done for the RNetLogo package. The things presented here could be used to run multiple simulations in parallel on a single computer with multiple processors or to spread multiple simulation to several processors in computer clusters/grids.   
-Using the parallel package has an positive side effect: It enables you to start more than one NetLogo instance with GUI in parallel, which is not possible with parallelization.
+\pkg{RNetLogo} is a flexible interface for NetLogo to R. It opens various possiblities to connect agent-based models with advanced statistics. It opens the possiblity to use R as the starting point to design systematic experiments with agent-based models
+and perform parameter fittings and sensitivity analysis. Therefore, it can be necessary to perform repeated (independent) simulations which could be parallelized. Here, I present how such a parallelization can be done for the \pkg{RNetLogo} package. The techniques presented here can be used to run multiple simulations in parallel on a single computer with multiple processors or to spread multiple simulations to several processors in computer clusters/grids.   
+Using the \pkg{parallel} package has a positive side effect: It enables you to start more than one NetLogo instance with GUI in parallel, which is not possible without parallelization.
 }
 \Keywords{NetLogo, R, agent based modelling, abm, 
 individual based modelling, ibm, parallelization}
@@ -78,24 +78,24 @@ options(prompt = "R> ", continue = "+  ", width = 70, useFancyQuotes = FALSE)
 \section{Motivation}
 \label{sec:Motivation}
 
-Since modern computers mostly have more than one processor and agent-based simulations are often complex and time comsuming it is desireable to spread repeated simulations, for example for parameter fitting or sensitivity analysis, to multiple processors in parallel.
-Here, I will present one way of how it is possible to spread multiple NetLogo simulations controlled from R via the RNetLogo package to multiple processors. 
+Since modern computers mostly have more than one processor and agent-based simulations are often complex and time consuming it is desireable to spread repeated simulations, for example for parameter fitting or sensitivity analysis, to multiple processors in parallel.
+Here, I will present one way of how it is possible to spread multiple NetLogo simulations controlled from R via the \pkg{RNetLogo} package to multiple processors. 
 
 \section{Parallelization in R}
 \label{sec:ParallelR}
 
-R itself is not able to make use of multiple processors of a computer. But there are several R packages available, which enable the use to spread repeated processes to multiple processors. There is a CRAN Task View called "High-Performance and Parallel Computing with R" at \url{http://cran.r-project.org/web/views/HighPerformanceComputing.html}. 
+R itself is not able to make use of multiple processors of a computer. But there are several R packages available, which enable the user to spread repeated processes to multiple processors. There is a CRAN Task View called "High-Performance and Parallel Computing with R" at \url{http://cran.r-project.org/web/views/HighPerformanceComputing.html}. 
 Since R version 2.14.0 there is the \pkg{parallel} package included in every standard R installation. 
-In the following I will present how to use this \pkg{parallel} package in conjunction with RNetLogo. Therefore, to follow the examples it requires that you have at R version >= 2.14.0 installed.
-There is a pdf file coming with the parallel packing giving a short introduction into the usage of the package and the plattform specific differences. You should always start by reading this document.
+In the following I will present how to use this \pkg{parallel} package in conjunction with \pkg{RNetLogo}. Therefore, to follow the examples it requires that you have an R version >= 2.14.0 installed.
+There is a pdf file coming with the \pkg{parallel} packing giving a short introduction into the usage of the package and the platform specific differences. You should always start by reading this document.
 A last note, before we start: The commands presented in the following have been tested on Windows and Linux operation systems only. If you have experiences with Mac OS please let me know.
 
 \section{Parallelize a simple process}
 \label{sec:simpleProcess}
 
-The basic concept of the \pkg{parallel} package is to parallelize an apply (or lapply, sapply etc.) operation. This means, that the process you want to parallelize has to be process which is applied to an array, matrix, list or whatever.
+The basic concept of the \pkg{parallel} package is to parallelize an apply (or lapply, sapply etc.) operation. This means that the process you want to parallelize has to be a process which is applied to an array, matrix, list, etc.
 
-Let us start with a simple example without using RNetLogo. First, we define a simple function which calculates the square of an input number.
+Let us start with a simple example without using \pkg{RNetLogo}. First, we define a simple function which calculates the square of an input number.
 
 <<label=simpleFunction, eval=TRUE, echo=TRUE>>=
 testfun1 <- function(x) {
@@ -103,7 +103,7 @@ testfun1 <- function(x) {
 }
 @
 
-We could apply this simple function to a vector of values using \code{sapply} like this:
+We can apply this simple function to a vector of values using \code{sapply} like this:
 
 <<label=applySimpleFunction, eval=TRUE, echo=TRUE>>=
 my.v1 <- 1:10
@@ -113,11 +113,11 @@ my.v1.quad <- sapply(my.v1, testfun1)
 print(my.v1.quad)
 @
 
-The result is a vector with the quadratic values of the input vector, i.e. the function was applied sequentially to each element of the input vector.
+The result is a vector with the squared values of the input vector, i.e. the function was applied sequentially to each element of the input vector.
 
-One way to use the \pkg{parallel} package is to use the parallel version of the \code{sapply} function which is called \code{parSapply}.
+One way to use the \pkg{parallel} package is to run the parallel version of the \code{sapply} function which is called \code{parSapply}.
 
-But before we can use this function, we have to make/register a cluster, as you know from the manual of the \pkg{parallel} package. 
+Before we can use this function, we have to make/register a cluster, as you know from the manual of the \pkg{parallel} package. 
 Therefore, we could, for example, detect the number of cores of our local computer and start a local cluster with this number of processors, as shown here:
 
 <<label=makeCluster1, eval=TRUE, echo=TRUE>>=
@@ -127,7 +127,7 @@ library(parallel)
 # detect the number of cores available
 processors <- detectCores()
 
-# create cluster
+# create a cluster
 cl <- makeCluster(processors)
 @
 
@@ -146,10 +146,10 @@ stopCluster(cl)
 \section{Parallelize RNetLogo}
 \label{sec:RNetLogo}
 
-As you know from the RNetLogo manual, it requires an initialization using the \code{NLStart} and (maybe) \code{NLLoadModel} function. To parallelize (R)NetLogo we need this initialization to be done for every processor, because they are independent from each other (which is a very important property, because, for example, random processes in parallel simulations should not beeing influenced by each other). 
+As you know from the \pkg{RNetLogo} manual, it requires an initialization using the \code{NLStart} and (maybe) \code{NLLoadModel} function. To parallelize \pkg{RNetLogo} we need this initialization to be done for every processor, because they are independent from each other (which is a very important property, because, for example, random processes in parallel simulations should not beeing influenced by each other). 
 
-Therefore, it makes sence to put the initialization, the simulation and the quiting process into seperate functions. 
-These functions could look like the following (if you want to test these, don't forget to adapt the paths appropriate):
+Therefore, it makes sence to put the initialization, the simulation, and the quiting process into separate functions. 
+These functions can look like the following (if you want to test these, don't forget to adapt the paths appropriate):
 
 <<label=defineFunctions1, eval=TRUE, echo=TRUE>>=
 # the initialization function
@@ -182,9 +182,9 @@ postpro <- function(x) {
 \subsection{With Graphical User Interface (GUI)}
 \label{sec:gui}
 
-Now, we have to start the cluster, run the initialization function in each processor, which will open so many NetLogo windows as we have processors.
+Now, we have to start the cluster, run the initialization function in each processor, which will open as many NetLogo windows as we have processors.
 
-Note, that this is also a nice way to run multiple NetLogo GUI instances in parallel, what is not possible within one R session without this parallelization (see documentation of the RNetLogo package for detail).
+Note, that this is also a nice way to run multiple NetLogo GUI instances in parallel, which is not possible within one R session without this parallelization.
 
 <<label=initNetLogo1, eval=TRUE, echo=TRUE>>=
 # load the parallel package, if not already done
@@ -199,7 +199,7 @@ cl <- makeCluster(processors)
 # set variables for the start up process
 # adapt path appropriate
 gui <- TRUE
-nl.path <- "C:/Program Files/NetLogo 5.0"
+nl.path <- "C:/Program Files/NetLogo 5.0.3"
 model.path <- "models/Sample Models/Earth Science/Fire.nlogo"
 
 # load NetLogo in each processor/core
@@ -233,9 +233,9 @@ stopCluster(cl)
 \subsection{Headless}
 \label{sec:headless}
 
-The same is possible with the headless mode, i.e. with the GUI. We just have to set the variable \code{gui} to \code{FALSE}.
+The same is possible with the headless mode, i.e. without the GUI. We just have to set the variable \code{gui} to \code{FALSE}.
 
-It could look like this:
+It can look like this:
 
 <<label=simNetLogo1, eval=TRUE, echo=TRUE>>=
 # run in headless mode
@@ -267,7 +267,7 @@ stopCluster(cl)
 \section{Conclusion}
 \label{sec:conclusion}
 
-We have seen one way of how it is possible to spread repeated and independent simulations to multiple processors using the \pkg{parallel} package. Therefore, RNetLogo can be efficiently used to perform parameter fittings and sensitivity analyses where large number of repeated simultions are required. 
+We have seen one way of how it is possible to spread repeated and independent simulations to multiple processors using the \pkg{parallel} package. Therefore, \pkg{RNetLogo} can be efficiently used to perform parameter fittings and sensitivity analyses where large number of repeated simultions are required. 
 
 
 %\section*{Acknowledgement}
