update to 0.9.5: just limit the number of processors used to 2 in parallelProcessing.Rnw to fulfill CRAN policy
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rnetlogo@31 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RNetLogo/vignettes/parallelProcessing.Rnw
+++ b/pkg/RNetLogo/vignettes/parallelProcessing.Rnw
@@ -129,7 +129,13 @@ library(parallel)
 
 # detect the number of cores available
 processors <- detectCores()
-
+@
+<<eval=TRUE, echo=FALSE, results=hide>>=
+if (processors > 2) {
+  processors <- 2
+}
+@
+<<eval=TRUE, echo=TRUE>>=
 # create a cluster
 cl <- makeCluster(processors)
 @
