small changes in vignettes
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rnetlogo@35 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RNetLogo/vignettes/performanceNotes.Rnw
+++ b/pkg/RNetLogo/vignettes/performanceNotes.Rnw
@@ -67,7 +67,7 @@ individual based modelling, ibm, performance, execution time} %% without formatt
 \begin{document}
 \SweaveOpts{engine = R, eps = FALSE}
 \SweaveOpts{keep.source = TRUE}
-%\SweaveOpts{prefix.string=C:/Program Files/R/R-2.15.2/own_packages/rnetlogo/pkg/RNetLogo/vignettes/images/}
+%\SweaveOpts{prefix.string=C:/Users/jthiele/own_packages/rnetlogo/pkg/RNetLogo/vignettes/images/}
 \SweaveOpts{prefix.string=images/}
 
 <<preliminaries, echo=FALSE, results=hide>>=
