-change in NLStart: obj.name is now nl.obj. Creates the NetLogo reference into a list stored in local environment and not in global environment anymore. -change in all functions: nl.obj expects a string and not a NetLogo reference. (see change in NLStart) -change in NLQuit: takes a new argument all to close/quit all open NetLogo instances -clear working directory strategy: stores the working directory active before creating the first NetLogo instance. Reset to this wd after closing the last active NetLogo instance. -several bug fixes/changes in manual, examples, and tutorial
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rnetlogo@42 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RNetLogo/inst/tutorial/refs.bib
+++ b/pkg/RNetLogo/inst/tutorial/refs.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.5.
+% This file was created with JabRef 2.9.2.
 % Encoding: Cp1252
 
 @MANUAL{Rcore,
@@ -73,22 +73,28 @@
   url = {http://www.bio.ic.ac.uk/research/crawley/statistics/}
 }
 
-@ELECTRONIC{Felsen2007,
+@MISC{Felsen2007,
   author = {Felsen, M and 
 	
 	Wilensky, U},
-  year = {2007},
   title = {NetLogo Urban Suite - Sprawl Effect model.},
+  year = {2007},
   organization = {Center for Connected Learning and Computer-Based Modeling, Northwestern
 	University, Evanston, IL.},
-  url = {http://ccl.northwestern.edu/netlogo/models/UrbanSuite-SprawlEffect},
   owner = {jthiele},
-  timestamp = {2011.07.17}
+  timestamp = {2011.07.17},
+  url = {http://ccl.northwestern.edu/netlogo/models/UrbanSuite-SprawlEffect}
 }
 
 @MANUAL{Goedman2010,
   title = {Ryacas: R interface to the yacas computer algebra system},
-  author = {Goedman, R; Grothendieck, G; Højsgaard, S and Pinkus, A},
+  author = {Goedman, R and
+	
+	Grothendieck, G and
+	
+	Højsgaard, S and 
+	
+	Pinkus, A},
   year = {2010},
   note = {R package version 0.2-10},
   owner = {jthiele},
@@ -111,14 +117,14 @@
   timestamp = {2011.07.16}
 }
 
-@ELECTRONIC{QR2011,
+@MISC{QR2011,
   author = {Kabacoff, RI},
-  year = {2011},
   title = {Quick-R: acccessing the power of R},
+  year = {2011},
   note = {last accessed: 2011-07-14},
-  url = {http://www.statmethods.net/},
   owner = {jthiele},
-  timestamp = {2011.07.14}
+  timestamp = {2011.07.14},
+  url = {http://www.statmethods.net/}
 }
 
 @BOOK{Kabacoff2010,
@@ -142,7 +148,15 @@
 
 @MANUAL{Kuhn2010,
   title = {odfWeave: Sweave processing of Open Document Format (ODF) files},
-  author = {Kuhn, M; Weston, S; Coulter, N; Lenon, P and Otles, Z},
+  author = {Kuhn, M and
+	
+	Weston, S and
+	
+	Coulter, N and
+	
+	Lenon, P and 
+	
+	Otles, Z},
   year = {2010},
   note = {R package version 0.7.17},
   owner = {jthiele},
@@ -150,39 +164,27 @@
   url = {http://CRAN.R-project.org/package=odfWeave}
 }
 
-@ELECTRONIC{Maindonald2008,
+@MISC{Maindonald2008,
   author = {Maindonald, JH},
+  title = {Using R for Data Analysis and Graphics: Introduction, Code and Commentary},
   month = {January},
   year = {2008},
-  title = {Using R for Data Analysis and Graphics: Introduction, Code and Commentary},
-  url = {http://cran.r-project.org/doc/contrib/usingR.pdf},
   owner = {jthiele},
-  timestamp = {2011.07.14}
+  timestamp = {2011.07.14},
+  url = {http://cran.r-project.org/doc/contrib/usingR.pdf}
 }
 
-@ELECTRONIC{Owen2010,
+@MISC{Owen2010,
   author = {Owen, WJ},
-  year = {2010},
   title = {The R Guide},
-  url = {http://cran.r-project.org/doc/contrib/Owen-TheRGuide.pdf},
+  year = {2010},
   owner = {jthiele},
-  timestamp = {2011.07.14}
-}
-
-@ELECTRONIC{Pebesma2011,
-  author = {Edzer J. Pebesma},
-  year = {2004},
-  title = {Multivariable geostatistics in S: the gstat package},
-  url = {http://www.gstat.org/},
-  journal = {Computers \& Geosciences},
-  owner = {jthiele},
-  pages = {683-691},
-  timestamp = {2011.07.15},
-  volume = {30}
+  timestamp = {2011.07.14},
+  url = {http://cran.r-project.org/doc/contrib/Owen-TheRGuide.pdf}
 }
 
 @ARTICLE{Pebesma2011b,
-  author = {Pebesma, EJ;
+  author = {Pebesma, EJ and
 	
 	Bivand, RS},
   title = {Classes and methods for spatial data in R},
@@ -195,17 +197,29 @@
   url = {http://cran.r-project.org/doc/Rnews/}
 }
 
-@ELECTRONIC{Pinkus2007,
+@MISC{Pebesma2011,
+  author = {Edzer J. Pebesma},
+  title = {Multivariable geostatistics in S: the gstat package},
+  year = {2004},
+  journal = {Computers \& Geosciences},
+  owner = {jthiele},
+  pages = {683-691},
+  timestamp = {2011.07.15},
+  url = {http://www.gstat.org/},
+  volume = {30}
+}
+
+@MISC{Pinkus2007,
   author = {Pinkus, A;
 	
 	Winitzki, S and
 	
 	Niesen, J},
-  year = {2007},
   title = {YACAS Computer Algebra System},
-  url = {http://yacas.sourceforge.net/homepage.html},
+  year = {2007},
   owner = {jthiele},
-  timestamp = {2011.07.15}
+  timestamp = {2011.07.15},
+  url = {http://yacas.sourceforge.net/homepage.html}
 }
 
 @BOOK{Railsback2011,
@@ -219,15 +233,15 @@
   timestamp = {2011.02.22}
 }
 
-@ELECTRONIC{Urbanek2011,
+@MISC{Urbanek2011,
   author = {Urbanek, S},
+  title = {rJava: Low-level R to Java interface},
   month = {June},
   year = {2010},
-  title = {rJava: Low-level R to Java interface},
   note = {R package version 0.8-8},
-  url = {http://CRAN.R-project.org/package=rJava},
   owner = {jthiele},
-  timestamp = {2011.07.15}
+  timestamp = {2011.07.15},
+  url = {http://CRAN.R-project.org/package=rJava}
 }
 
 @BOOK{VenablesRipley2002,
@@ -254,17 +268,17 @@
   url = {http://www.stats.ox.ac.uk/pub/MASS4/}
 }
 
-@ELECTRONIC{Venables2011,
+@MISC{Venables2011,
   author = {Venables, WN;
 	
 	Smith, DM and
 	
 	R Core Team},
-  year = {2011},
   title = {An Introduction to R},
-  url = {http://cran.r-project.org/doc/manuals/R-intro.pdf},
+  year = {2011},
   owner = {jthiele},
-  timestamp = {2011.07.14}
+  timestamp = {2011.07.14},
+  url = {http://cran.r-project.org/doc/manuals/R-intro.pdf}
 }
 
 @MANUAL{Wilensky1999,
@@ -279,37 +293,37 @@
   url = {http://ccl.northwestern.edu/netlogo/}
 }
 
-@ELECTRONIC{Wilensky1998,
+@MISC{Wilensky1998,
   author = {Wilensky, U},
-  year = {1998},
   title = {NetLogo Virus model.},
+  year = {1998},
   organization = {Center for Connected Learning and Computer-Based Modeling, Northwestern
 	University, Evanston, IL.},
-  url = {http://ccl.northwestern.edu/netlogo/models/Virus},
   owner = {jthiele},
-  timestamp = {2011.07.16}
+  timestamp = {2011.07.16},
+  url = {http://ccl.northwestern.edu/netlogo/models/Virus}
 }
 
-@ELECTRONIC{Wilensky1997,
+@MISC{Wilensky1997,
   author = {Wilensky, U},
-  year = {1997},
   title = {NetLogo GasLab Free Gas model.},
+  year = {1997},
   organization = {Center for Connected Learning and Computer-Based Modeling, Northwestern
 	University, Evanston, IL.},
-  url = {http://ccl.northwestern.edu/netlogo/models/GasLabFreeGas},
   owner = {jthiele},
-  timestamp = {2011.07.15}
+  timestamp = {2011.07.15},
+  url = {http://ccl.northwestern.edu/netlogo/models/GasLabFreeGas}
 }
 
-@ELECTRONIC{Wilensky1997b,
+@MISC{Wilensky1997b,
   author = {Wilensky, U},
-  year = {1997},
   title = {NetLogo Fire model.},
+  year = {1997},
   organization = {Center for Connected Learning and Computer-Based Modeling, Northwestern
 	University, Evanston, IL.},
-  url = {http://ccl.northwestern.edu/netlogo/models/Fire},
   owner = {jthiele},
-  timestamp = {2011.07.16}
+  timestamp = {2011.07.16},
+  url = {http://ccl.northwestern.edu/netlogo/models/Fire}
 }
 
 @BOOK{Wilensky2011,
@@ -328,7 +342,7 @@
   title = {A Beginner's Guide to {R}},
   publisher = {Springer},
   year = {2009},
-  author = {Zuur, AF;
+  author = {Zuur, AF and
 	
 	Ieno, EN and
 	
