--- a/pkg/RNetLogo/NEWS
+++ b/pkg/RNetLogo/NEWS
@@ -1,9 +1,13 @@
 Changes in version 0.9-6:
 	BUG FIXES
 	*NLStart(<nl.path>, ...) failed with: Error in .jnew	 ("nlcon/Preprocess") : java.lang.UnsupportedClassVersionError: 	 nlcon/Preprocess : Unsupported major.minor version 51.0}. This 	 happend when using Java versions before 7. The .jar files are 	 now compiled with support up to Java 5. 
+	*several bug fixes and changes in manual pages, code examples 	 and tutorial
 
 	NEW FEATURES
 	*Change.log moved to NEWS.Rd. Therefore, news() function is 	supported now.
+	*Argument obj.name in NLStart is replaced by nl.obj. In all 	other	functions nl.obj is now also a string instead of an 		reference to NetLogo. References are handled internally, now, 	and no global variables are created anymore. 
+	*More clear working directory handling strategy: stores the 	working directory active before creating the first NetLogo 	instance. Reset to this wd after closing the last active 	NetLogo instance.
+	*New all argument in NLQuit to close/quit all open NetLogo 	instances.
 
 
 Changes in version 0.9-5:
