updates in tutorial.Rnw
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rnetlogo@43 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RNetLogo/inst/tutorial/tutorial.Rnw
+++ b/pkg/RNetLogo/inst/tutorial/tutorial.Rnw
@@ -605,7 +605,7 @@ NLStart(nl.path,
         nl.obj=my.netlogo3)
 @
 
-All functions, presented above, take as last (optional) argument the referece name of 
+All functions, presented above, take as last (optional) argument the reference name of 
 the NetLogo instance (nl.obj). Therefore, we can specify which instance we want 
 to use. When working in headless mode, the first thing to do is always to load a 
 model. Executing a command or reporter without loading a model in headless 
