update to version 1.0-0
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rnetlogo@47 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RNetLogo/NEWS
+++ b/pkg/RNetLogo/NEWS
@@ -1,5 +1,13 @@
 Changes in version 0.9-7:
 	NEW FEATURES
+      *Official release in together with the publication in Journal of Statistical Software.  
+	
+	BUG FIXES
+	  *Update of manual pages and code examples.
+
+	  
+Changes in version 0.9-7:
+	NEW FEATURES
 	*Massive performance improvements in NLSetAgentSet, NLSetPatches, NLSetPatchSet
 	*Change in NLSetPatchSet: identifies columns in the input data.frame by name. Expects pxcor, pycor (and, in case of 3D, pzcor) columns.
 
