update to version 1.0-1
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rnetlogo@55 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RNetLogo/NEWS
+++ b/pkg/RNetLogo/NEWS
@@ -1,4 +1,10 @@
-Changes in version 0.9-7:
+Changes in version 1.0-1:
+	BUG FIXES
+	  *Fixing CRAN policy violation.
+	  *Update of manual pages and code examples.
+
+
+Changes in version 1.0-0:
 	NEW FEATURES
       *Official release in together with the publication in Journal of Statistical Software.  
 	
