--- a/pkg/RNetLogo/vignettes/parallelProcessing.Rnw
+++ b/pkg/RNetLogo/vignettes/parallelProcessing.Rnw
@@ -49,7 +49,7 @@ individual based modelling, ibm, modelling} %% without formatting
   University of G\"ottingen\\
   B\"usgenweg 4\\
   37077 G\"ottingen, Germany\\
-  E-mail: \email{jthiele@gwdg.de}\\
+  E-mail: \email{rnetlogo@gmx.de}\\
   URL: \url{http://www.uni-goettingen.de/en/72779.html}\\
 }
 
