remove NetLogo 4.x support (as requested by CRAN maintainers)
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rnetlogo@57 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RNetLogo/NEWS
+++ b/pkg/RNetLogo/NEWS
@@ -1,4 +1,8 @@
 Changes in version 1.0-1:
+	NEW FEATURES
+	  *Removing support for NetLogo 4.x (no nl.version argument in NLStart anymore).
+	  *Removing performanceNotes vignette.
+	  
 	BUG FIXES
 	  *Fixing CRAN policy violation.
 	  *Update of manual pages and code examples.
