--- a/pkg/RNetLogo/NEWS
+++ b/pkg/RNetLogo/NEWS
@@ -1,3 +1,7 @@
+Changes in version 1.0-2:
+	NEW FEATURES
+	  *Update to NetLogo 5.3
+
 Changes in version 1.0-1:
 	NEW FEATURES
 	  *Removing support for NetLogo 4.x (no nl.version argument in NLStart anymore).
