--- a/pkg/RNetLogo/NEWS
+++ b/pkg/RNetLogo/NEWS
@@ -1,6 +1,8 @@
 Changes in version 1.0-2:
 	NEW FEATURES
 	  *Update to NetLogo 5.3
+	  *Changes in internal architecture of holding S4 class object for conformity to CRAN policy 
+	  *Supporting older Java version again (addressing "Unsupported major.minor version" error, however, using Java version before 8.0 is deprecated)
 
 Changes in version 1.0-1:
 	NEW FEATURES
