Update to NetLogo 6.0
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rnetlogo@61 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RNetLogo/NEWS
+++ b/pkg/RNetLogo/NEWS
@@ -1,3 +1,8 @@
+Changes in version 1.0-3:
+	NEW FEATURES
+	  *Update to NetLogo 6.0
+	  *Adding optional parameter in NLStart to specify name of netlogo.jar file as the name contains the version number in the name since NetLogo 6.0.0.
+
 Changes in version 1.0-2:
 	NEW FEATURES
 	  *Update to NetLogo 5.3
